--- a/miniprogram/pages/tools-draw/tools-draw.wxml
+++ b/miniprogram/pages/tools-draw/tools-draw.wxml
@@ -1,21 +1,7 @@
-<!--index.wxml-->
+<!-- index.wxml -->
 <view class="container">
-  <navigator class="item" url="../painting/painting?pageType=whiteBoard">
-    画画
-  </navigator>
-  <navigator class="item" url="../painting2/painting2">
-    涂照片
-  </navigator>
-  <navigator class="item" url='../pixel/pixel'>
-    像素涂鸦
-  </navigator>
-  <navigator class="item" url="../painting/painting?pageType=highlighter">
-    荧光涂鸦
-  </navigator>
-  <view class='author'>
-    <view>designed by soso
-      <navigator url="../version/version" style="text-decoration: underline; display: inline">(version 1.2.4)</navigator>
-    </view>
-    <view>contact: jsososo@outlook.com</view>
-  </view>
+  <navigator class="item" url="../painting/painting?pageType=whiteBoard">画画</navigator>
+  <navigator class="item" url="../painting2/painting2">涂照片</navigator>
+  <navigator class="item" url='../pixel/pixel'>像素涂鸦</navigator>
+  <navigator class="item" url="../painting/painting?pageType=highlighter">荧光涂鸦</navigator>
 </view>
