--- a/miniprogram/pages/painting/painting.wxml
+++ b/miniprogram/pages/painting/painting.wxml
@@ -1,8 +1,10 @@
-<!--painting.wxml-->
+<!-- painting.wxml -->
 <canvas canvas-id="myCanvas" style="height: calc(100vh - {{canvasHeight*2}}rpx)" disable-scroll="true" bindtouchend="touchEnd" bindtouchstart="touchStart" bindtouchmove="touchMove" />
 <view class="bottom">
   <block wx:for="{{btnInfo}}" wx:key="{{index}}">
-    <view class="list-item" data-type="{{item.type}}" style="background: {{item.background}}" bindtap="tapBtn"></view>
+    <view class="list-item" data-type="{{item.type}}" bindtap="tapBtn">
+      <image src="{{item.background}}" style="width: 100%; height: 100%;" />
+    </view>
   </block>
 </view>
 <view class="choose-box" wx:if="{{width}}">
@@ -12,22 +14,24 @@
 <view class="choose-box" wx:if="{{color}}">
   <view class="color-box" style="background: {{'rgb(' + r + ', ' + g + ', ' + b + ')'}}; height: {{w*2}}rpx; border-radius: {{w}}rpx"></view>
   <view wx:if="{{pageType === 'whiteBoard'}}" style="margin-left: 40rpx;">
-    <switch checked="{{showHighLight}}" bindchange="changeHighLight" />显示荧光</view>
+    <switch checked="{{showHighLight}}" bindchange="changeHighLight" />
+    显示荧光
+  </view>
   <slider min="0" max="255" step="1" show-value="true" activeColor="red" value="{{r}}" data-color="r" bindchange="changeColor" />
   <slider min="0" max="255" step="1" show-value="true" activeColor="green" value="{{g}}" data-color="g" bindchange="changeColor" />
   <slider min="0" max="255" step="1" show-value="true" activeColor="blue" value="{{b}}" data-color="b" bindchange="changeColor" />
 </view>
 <view class="choose-box-flex" wx:if="{{clear}}">
-  <!--<view class="choose-item" bindtap="tapDraBack">-->
-    <!--<view class="choose-img" style='background: url("http://static.jsososo.com/bmob-cdn-20716.b0.upaiyun.com/2018/10/29/997c2bf5404e5abc809b42fe6bb902f9.png") white no-repeat; background-size: 52rpx 52rpx;background-position: 4rpx 4rpx; border: {{eraser ? "4rpx solid #888" : "4rpx solid transparent"}}'></view>-->
-    <!--<view>撤回</view>-->
-  <!--</view>-->
   <view class="choose-item" bindtap="setEraser">
-    <view class="choose-img" style='background: url("http://static.jsososo.com/bmob-cdn-20716.b0.upaiyun.com/2018/10/29/997c2bf5404e5abc809b42fe6bb902f9.png") white no-repeat; background-size: 52rpx 52rpx;background-position: 4rpx 4rpx; border: {{eraser ? "4rpx solid #888" : "4rpx solid transparent"}}'></view>
+    <view class="choose-img" style='border: {{eraser ? "4rpx solid #888" : "4rpx solid transparent"}}'>
+      <image src="/images/icons/chooseEraser.png" style="width: 52rpx; height: 52rpx;" />
+    </view>
     <view>橡皮擦</view>
   </view>
   <view class="choose-item" bindtap="clearCanvas">
-    <view class="choose-img" style='background: url("http://static.jsososo.com/bmob-cdn-20716.b0.upaiyun.com/2018/10/29/33f80e334020a90b80e8cd8423cb8fbe.png") white no-repeat; background-size: 52rpx 52rpx;background-position: 4rpx 4rpx;'></view>
+    <view class="choose-img">
+      <image src="/images/icons/clearCanvas.png" style="width: 52rpx; height: 52rpx;" />
+    </view>
     <view>清空</view>
   </view>
 </view>
