--- a/miniprogram/pages/painting/painting.wxml
+++ b/miniprogram/pages/painting/painting.wxml
@@ -9,7 +9,7 @@
 </view>
 <view class="choose-box" wx:if="{{width}}">
   <view class="color-box" style="background: {{'rgb(' + r + ', ' + g + ', ' + b + ')'}};height: {{2*w}}rpx; border-radius: {{w}}rpx"></view>
-  <slider min="1" max="50" step="1" show-value="true" value="{{w}}" bindchange="changeWidth" />
+  <slider min="1" max="50" step="1" data-color="r" show-value="true" value="{{w}}" bindchange="changeWidth" />
 </view>
 <view class="choose-box" wx:if="{{color}}">
   <view class="color-box" style="background: {{'rgb(' + r + ', ' + g + ', ' + b + ')'}}; height: {{w*2}}rpx; border-radius: {{w}}rpx"></view>
