--- a/miniprogram/styles/paint-common.wxss
+++ b/miniprogram/styles/paint-common.wxss
@@ -5,6 +5,7 @@ page {
 
 canvas {
   width: 100vw;
+  height: calc(100vh - 120rpx);
   box-shadow: 0 4rpx 12rpx rgba(0, 0, 0, 0.05);
 }
 
@@ -71,6 +72,7 @@ canvas {
   border-top-left-radius: 24rpx;
   border-top-right-radius: 24rpx;
   box-shadow: 0 -2rpx 10rpx rgba(0, 0, 0, 0.05);
+  padding: 20rpx 0;
 }
 
 .color-box {
