--- a/miniprogram/pages/tools-meditation/tools-meditation.wxss
+++ b/miniprogram/pages/tools-meditation/tools-meditation.wxss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     padding: 40rpx;
     box-sizing: border-box;
-    background-color: #f8f8f8;
+    /* background-color: #f8f8f8; */
 }
 
 .timer {
@@ -103,4 +103,13 @@
     color: #666;
     line-height: 1.6;
     margin: 10rpx 0;
+}
+
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
