--- a/miniprogram/index/pages/emotion-details/emotion-details.wxml
+++ b/miniprogram/index/pages/emotion-details/emotion-details.wxml
@@ -12,7 +12,7 @@
         <view class="mb-4 flex items-center">
             <!-- 情绪图标 -->
             <view class="flex justify-center">
-                <image wx:if="{{selectedEmotion.type}}" src="../../images/icons/{{selectedEmotion.type}}.png" class="w-12 h-12 flex items-center justify-center mr-4" />
+                <image wx:if="{{selectedEmotion.type}}" src="/images/icons/{{selectedEmotion.type}}.png" class="w-12 h-12 flex items-center justify-center mr-4" />
             </view>
             <view>
                 <view class="font-medium">{{selectedEmotion.name}}</view>
