--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <!-- pages/index/index.wxml -->
 <view class="container bg-gray-100">
+    <guide-modal id="guideModal" />
     <!-- <view class="header p-4 flex items-center bg-white">
         <view class="back-icon text-blue-500">
             <text class="cuIcon-back"></text>
